# openclaw-tui

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.ai/: DESIGN-v2-logpanel.md  DESIGN.md  PLAN.md  RETRO.md
src/openclaw_tui/: __init__.py  __main__.py  app.py  client.py  config.py  models.py  transcript.py  tree.py
src/openclaw_tui/chat/: __init__.py  command_handlers.py  commands.py  event_handlers.py  new_session_flow.py  panel.py  runtime_types.py  state.py  stream_assembler.py
src/openclaw_tui/gateway/: __init__.py  device_auth.py  ws_client.py
src/openclaw_tui/utils/: clipboard.py  time.py
src/openclaw_tui/widgets/: __init__.py  agent_tree.py  log_panel.py  (+2 more)
tests/: test_agent_tree_v2.py  test_app.py  test_app_chat_mode.py  test_chat_commands.py  test_chat_event_handlers.py  test_chat_header_updates.py  test_chat_message.py  test_chat_panel.py  test_chat_polling.py  test_chat_regression_keybinds.py  test_chat_state.py  test_chat_transport_parity.py  test_client.py  test_client_chat.py  test_client_v2.py  test_clipboard.py  test_config.py  test_e2e_parity_local_gateway.py  test_gateway_recovery.py  test_gateway_ws_client.py  test_keybind_behavior_contract.py  test_log_panel.py  test_log_panel_v2.py  test_models.py  test_models_v2.py  test_new_session_flow.py  test_new_session_modal.py  test_parity_contract.py  test_regression_timeout_404.py  test_relative_time.py  test_session_controls_parity.py  test_slash_command_parity.py  test_summary_bar_v2.py  test_transcript.py  test_tree.py  test_widgets.py
tests/fixtures/: gateway_chat_events.json
